<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AddBoardActivity"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
             android:text="@string/overview"
            style="@style/CategoryStyle"
           />

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_board_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/board_name"
                android:inputType="textCapWords"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

         <TextView
             android:text="@string/description"
             style="@style/CategoryStyle"
             />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <EditText
                 style="@style/EditorFieldStyle"
                 android:id="@+id/add_board_description"
                android:hint="@string/add_desc"
                android:inputType="textCapWords"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_image"
            android:text="@string/add_image"
            style="@style/EditorFieldStyle"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/board_image"
            android:paddingTop="10dp"
            android:layout_width="200dp"
            android:contentDescription="@string/add_image"
            android:layout_height="150dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_board"
        android:text="@string/save_board"
        style="@style/EditorFieldStyle"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>